added phantom wallet support for local frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
             </section>
         </div>
     </main>
-
+    <script src="https://unpkg.com/@solana/web3.js@1.73.0/lib/index.iife.min.js"></script>
     <script src="app.js"></script>
 </body>
 
