added buffer polyfill

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,10 @@
             </section>
         </div>
     </main>
+    <script src="https://bundle.run/buffer@6.0.3"></script>
+    <script>
+        window.Buffer = window.buffer.Buffer;
+    </script>
     <script src="https://unpkg.com/@solana/web3.js@1.73.0/lib/index.iife.min.js"></script>
     <script src="app.js"></script>
 </body>
