Added API root endpoint and fixed Buffer polyfill

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,9 +70,9 @@
             </section>
         </div>
     </main>
-    <script src="https://bundle.run/buffer@6.0.3"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js"></script>
     <script>
-        window.Buffer = window.buffer.Buffer;
+        window.Buffer = buffer.Buffer;
     </script>
     <script src="https://unpkg.com/@solana/web3.js@1.73.0/lib/index.iife.min.js"></script>
     <script src="app.js"></script>
