--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,12 +70,7 @@
             </section>
         </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js"></script>
-    <script>
-        window.Buffer = buffer.Buffer;
-    </script>
-    <script src="https://unpkg.com/@solana/web3.js@1.73.0/lib/index.iife.min.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="/app.js"></script>
 </body>
 
 </html>
