--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
                 <div class="topbar-links">
                     <a class="topbar-link topbar-link-active" href="/">Developer Portal</a>
                     <a class="topbar-link" href="/activity.html">Activity Feed</a>
+                    <a class="topbar-link" href="/agent.html">Agent Demo</a>
                 </div>
             </nav>
 
