--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sentinel Auth Developer Portal</title>
+    <title>Sentinel Auth Login And Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Space+Grotesk:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <div class="page-shell">
         <main class="layout">
             <nav class="topbar panel">
                 <a class="brand-link" href="/">Sentinel Auth</a>
                 <div class="topbar-links">
-                    <a class="topbar-link topbar-link-active" href="/">Developer Portal</a>
+                    <a class="topbar-link topbar-link-active" href="/">Login + Dashboard</a>
                     <a class="topbar-link" href="/activity.html">Activity Feed</a>
-                    <a class="topbar-link" href="/agent.html">Agent Demo</a>
                 </div>
             </nav>
 
             <section class="hero panel">
-                <p class="eyebrow">Public API For AI Agent Control</p>
-                <h1>Issue a key, wire your agent, and route every risky action through policy checks.</h1>
+                <p class="eyebrow">Account-Based API Access</p>
+                <h1>Sign in first, then issue API keys tied to your account and manage agent policies from one dashboard.</h1>
                 <p class="hero-copy">
-                    Sentinel Auth is a developer-facing policy gateway for AI agents. Generate a key from this page,
-                    create a starter policy, and test a live authorization request without editing environment
-                    variables.
+                    Sentinel Auth now requires an account session before key issuance. Your dashboard shows the current
+                    account, generated API keys, quickstart snippets, and testing tools for policy and verification flows.
                 </p>
                 <div class="hero-meta">
                     <div>
@@ -53,62 +47,48 @@
                 <section class="panel">
                     <div class="section-heading">
                         <p class="eyebrow">Step 1</p>
-                        <h2>Get a developer key</h2>
+                        <h2>Create an account</h2>
                     </div>
-
-                    <form id="issue-key-form" class="stack">
+                    <form id="register-form" class="stack">
                         <label>
-                            <span>App name</span>
-                            <input id="app-name" name="app_name" type="text" placeholder="Atlas Agent Ops" required>
+                            <span>Full name</span>
+                            <input id="register-full-name" type="text" placeholder="Optional">
                         </label>
                         <label>
-                            <span>Owner email</span>
-                            <input id="owner-email" name="owner_email" type="email" placeholder="team@example.com"
-                                required>
+                            <span>Email</span>
+                            <input id="register-email" type="email" placeholder="team@example.com" required>
                         </label>
                         <label>
-                            <span>Owner name</span>
-                            <input id="owner-name" name="owner_name" type="text" placeholder="Optional">
+                            <span>Password</span>
+                            <input id="register-password" type="password" placeholder="Minimum 8 characters" required>
                         </label>
-                        <label>
-                            <span>Use case</span>
-                            <textarea id="use-case" name="use_case" rows="4"
-                                placeholder="Describe what your AI agents will manage."></textarea>
-                        </label>
-                        <button id="issue-key-button" class="btn btn-primary" type="submit">Issue API key</button>
+                        <button id="register-button" class="btn btn-primary" type="submit">Create account</button>
                     </form>
-
-                    <div class="output-card">
-                        <div class="output-header">
-                            <h3>Issued key</h3>
-                            <button id="copy-key-button" class="btn btn-ghost" type="button" disabled>Copy</button>
-                        </div>
-                        <code id="issued-key">No key issued yet.</code>
-                        <p id="issued-key-meta" class="muted">The plaintext key is only returned when it is created.</p>
-                    </div>
                 </section>
 
                 <section class="panel">
                     <div class="section-heading">
                         <p class="eyebrow">Step 2</p>
-                        <h2>Quickstart</h2>
+                        <h2>Sign in</h2>
                     </div>
-
-                    <div class="snippet-group">
-                        <div class="snippet-header">
-                            <h3>cURL</h3>
-                            <button id="copy-curl-button" class="btn btn-ghost" type="button" disabled>Copy</button>
+                    <form id="login-form" class="stack">
+                        <label>
+                            <span>Email</span>
+                            <input id="login-email" type="email" placeholder="team@example.com" required>
+                        </label>
+                        <label>
+                            <span>Password</span>
+                            <input id="login-password" type="password" placeholder="Your password" required>
+                        </label>
+                        <div class="action-row">
+                            <button id="login-button" class="btn btn-secondary" type="submit">Login</button>
+                            <button id="logout-button" class="btn btn-ghost" type="button" disabled>Logout</button>
                         </div>
-                        <pre id="curl-snippet"
-                            class="snippet">Issue a key to generate a ready-to-run cURL example.</pre>
-                    </div>
-
-                    <div class="snippet-group">
-                        <div class="snippet-header">
-                            <h3>JavaScript</h3>
-                            <button id="copy-js-button" class="btn btn-ghost" type="button" disabled>Copy</button>
-                        </div>
-                        <pre id="js-snippet" class="snippet">Issue a key to generate a browser/server example.</pre>
+                    </form>
+                    <div class="output-card">
+                        <h3>Current account</h3>
+                        <code id="account-summary">Not signed in.</code>
+                        <p id="session-meta" class="muted">Create an account or sign in to issue keys.</p>
                     </div>
                 </section>
             </section>
@@ -116,60 +96,113 @@
             <section class="grid">
                 <section class="panel">
                     <div class="section-heading">
-                        <p class="eyebrow">Step 3</p>
-                        <h2>Test your key</h2>
+                        <p class="eyebrow">Account</p>
+                        <h2>Issued API keys</h2>
                     </div>
-                    <p class="muted">
-                        This creates a custom policy and submits a sample AI action through <code>/v1/authorize</code>.
-                    </p>
-                    <div class="policy-configuration-form stack"
-                        style="margin-bottom: 20px; margin-top: 20px; padding: 15px; border: 1px solid var(--line); border-radius: 8px;">
-                        <h3>Configure Your Security Policy</h3>
-
-                        <label>
-                            <span>Policy Name</span>
-                            <input id="custom-policy-name" type="text" value="Custom Agent Policy">
-                        </label>
-
-                        <label>
-                            <span>Maximum Spend Limit (USD)</span>
-                            <input id="custom-spend-limit" type="number" value="1000" min="0">
-                        </label>
-
-                        <label>
-                            <span>Max Requests per Minute</span>
-                            <input id="custom-rate-limit" type="number" value="60" min="1">
-                        </label>
-                    </div>
-                    <div class="action-row">
-                        <button id="create-policy-button" class="btn btn-secondary" type="button" disabled>Create custom
-                            policy</button>
-                        <button id="run-authorize-button" class="btn btn-primary" type="button" disabled>Run sample
-                            authorize</button>
-                    </div>
-                    <div class="output-card">
-                        <h3>Current policy</h3>
-                        <code id="policy-id-label">No policy created yet.</code>
-                        <p class="muted">Open the Activity Feed to inspect receipts, blocked requests, and verification
-                            messages.</p>
-                        <div class="action-row">
-                            <a class="btn btn-ghost" href="/activity.html">Open activity feed</a>
-                        </div>
+                    <p class="muted">Each key is associated with your account. The plaintext value is only shown when a key is created.</p>
+                    <div id="api-key-list" class="dashboard-list">
+                        <div class="empty-state">No keys issued yet.</div>
                     </div>
                 </section>
 
                 <section class="panel">
                     <div class="section-heading">
-                        <p class="eyebrow">Live Log</p>
-                        <h2>Portal console</h2>
+                        <p class="eyebrow">Step 3</p>
+                        <h2>Generate a key</h2>
                     </div>
-                    <div id="console-output" class="console"></div>
+                    <form id="issue-key-form" class="stack">
+                        <label>
+                            <span>App name</span>
+                            <input id="app-name" type="text" placeholder="Atlas Agent Ops" required>
+                        </label>
+                        <label>
+                            <span>Owner name</span>
+                            <input id="owner-name" type="text" placeholder="Optional">
+                        </label>
+                        <label>
+                            <span>Use case</span>
+                            <textarea id="use-case" rows="4" placeholder="Describe what your AI agents will manage."></textarea>
+                        </label>
+                        <button id="issue-key-button" class="btn btn-primary" type="submit" disabled>Issue API key</button>
+                    </form>
+
+                    <div class="output-card">
+                        <div class="output-header">
+                            <h3>Latest issued key</h3>
+                            <button id="copy-key-button" class="btn btn-ghost" type="button" disabled>Copy</button>
+                        </div>
+                        <code id="issued-key">Sign in to create a key.</code>
+                        <p id="issued-key-meta" class="muted">The plaintext key is only returned once.</p>
+                    </div>
                 </section>
+            </section>
+
+            <section class="grid">
+                <section class="panel">
+                    <div class="section-heading">
+                        <p class="eyebrow">Step 4</p>
+                        <h2>Quickstart</h2>
+                    </div>
+                    <div class="snippet-group">
+                        <div class="snippet-header">
+                            <h3>cURL</h3>
+                            <button id="copy-curl-button" class="btn btn-ghost" type="button" disabled>Copy</button>
+                        </div>
+                        <pre id="curl-snippet" class="snippet">Sign in and issue a key to generate a ready-to-run cURL example.</pre>
+                    </div>
+                    <div class="snippet-group">
+                        <div class="snippet-header">
+                            <h3>JavaScript</h3>
+                            <button id="copy-js-button" class="btn btn-ghost" type="button" disabled>Copy</button>
+                        </div>
+                        <pre id="js-snippet" class="snippet">Sign in and issue a key to generate a browser/server example.</pre>
+                    </div>
+                </section>
+
+                <section class="panel">
+                    <div class="section-heading">
+                        <p class="eyebrow">Step 5</p>
+                        <h2>Test your key</h2>
+                    </div>
+                    <div class="stack">
+                        <label>
+                            <span>Policy name</span>
+                            <input id="custom-policy-name" type="text" value="Public portal starter policy">
+                        </label>
+                        <label>
+                            <span>Max spend USD</span>
+                            <input id="custom-spend-limit" type="number" value="5000" min="1" step="1">
+                        </label>
+                        <label>
+                            <span>Max requests per minute</span>
+                            <input id="custom-rate-limit" type="number" value="60" min="1" step="1">
+                        </label>
+                    </div>
+                    <div class="action-row">
+                        <button id="create-policy-button" class="btn btn-secondary" type="button" disabled>Create starter policy</button>
+                        <button id="run-authorize-button" class="btn btn-primary" type="button" disabled>Run sample authorize</button>
+                    </div>
+                    <div class="output-card">
+                        <h3>Current policy</h3>
+                        <code id="policy-id-label">No policy created yet.</code>
+                        <p class="muted">Open the Activity Feed to inspect receipts, blocked requests, and verification messages.</p>
+                        <div class="action-row">
+                            <a class="btn btn-ghost" href="/activity.html">Open activity feed</a>
+                        </div>
+                    </div>
+                </section>
+            </section>
+
+            <section class="panel">
+                <div class="section-heading">
+                    <p class="eyebrow">Live Log</p>
+                    <h2>Portal console</h2>
+                </div>
+                <div id="console-output" class="console"></div>
             </section>
         </main>
     </div>
 
     <script type="module" src="/app.js"></script>
 </body>
-
 </html>
