Major Frontend updates

--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -19,7 +19,8 @@
             <nav class="topbar panel">
                 <a class="brand-link" href="/">Sentinel Auth</a>
                 <div class="topbar-links">
-                    <a class="topbar-link" href="/">Developer Portal</a>
+                    <a class="topbar-link" href="/">Login</a>
+                    <a class="topbar-link" href="/dashboard.html">Dashboard</a>
                     <a class="topbar-link topbar-link-active" href="/activity.html">Activity Feed</a>
                     <a class="topbar-link" href="/agent.html">Agent Demo</a>
                 </div>
